# job-hunter-api

./: .gitignore  config.py  docker-compose.yml  main.py  pyproject.toml
app/: controller.py  routes.py
db/: database.py  schema.py
